[package]
name = "progress-bar"
version = "0.1.0"
edition = "2021"
description = "Markdown progress bar generator"
authors = ["expnn <expnn2ai@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.71"
clap = { version = "4.2.7", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
minijinja = { version = "0.32.1", features = ["source"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
